# journal-policy-tracker-backend

./: .dockerignore  .env  .flaskenv  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Procfile  README.md  app.py  codecompl.py  package.json  pyproject.toml  requirements.txt  run.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: report-a-bug.yml
.github/workflows/: deploy.yml  docker-ci.yml  docker-image.yml  dokku-ci.yml  linting.yml
codecompliance/: __init__.py  codecompl.py  initialize_db.py  routes.py
codecompliance/models/: domains.py  journalRatings.py  journals.py  journalsToDomains.py  policies.py  policyTypes.py
codecompliance/routes/: journals.py
server/: __init__.py  app.py  config.py  journals.db  validators.py
server/db/: __init__.py  journal.py
server/models/: Journal.py  User.py  journal.py  user.py
server/routes/: __init__.py  journal.py  user.py
server/static/: swagger.json
src/: constants.js  index.js
src/middlewares/: authMiddleware.js  journalMiddleware.js
src/models/: Journal.js  User.js
src/resolvers/: index.js  journalResolver.js  updateUserResolver.js  userResolver.js
src/types/: index.js  journalType.js  userType.js
src/utils/: emailConstants.js  emailForms.js  emailTemplate.js  forgotPasswordEmailTemplate.js  generateJournalData.js  generateUserData.js  getCurrentDateAndTime.js  inputHandler.js  sendEmail.js
test/: createTestConnection.js  index.test.js  journalsData.js  resolvers.test.js  testingServer.js
test/graphql/: login.jsx
test/graphql/mutations/: CHANGE_FULLNAME.js  CREATE_JOURNAL.js  DELETE_JOURNAL.js  REGISTER.js  UPDATE_JOURNAL.js
test/graphql/queries/: GET_ALL_JOURNALS.js  GET_ALL_JOURNALS_BY_CURRENT_USER.js  GET_ALL_JOURNALS_BY_USER_ID.js  GET_CURRENT_USER.js  GET_JOURNAL_BY_ISSN.js
