[tool.poetry]
name = "codecompl"
version = "0.1.0"
description = "Journal Code compliance database for web backend."
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^1.1.2"
gunicorn = "^20.1.0"
Flask-Login = "^0.5.0"
Flask-Bcrypt = "^0.7.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
WTForms = "^2.3.3"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
