[tool.poetry]
name = "codecompl"
version = "0.1.0"
description = "Journal Code compliance database for web backend."
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^1.1.2"
gunicorn = "^20.1.0"
Flask-Login = "^0.5.0"
Flask-Bcrypt = "^0.7.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
WTForms = "^2.3.3"
PyJWT = "^2.1.0"
python-dotenv = "^0.19.0"
Flask-Cors = "^3.0.10"
flask-swagger-ui = "^3.36.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
isort = "^5.10.1"
mypy = "^0.931"
types-Flask = "^1.1.6"
types-Flask-SQLAlchemy = "^2.5.1"
types-Flask-Cors = "^3.0.1"
pylint = "^2.12.2"
pre-commit = "^2.17.0"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"

[tool.black]
line-length = 88

[tool.isort]
line_length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pylint."master"]
load-plugins = ["pylint_flask_sqlalchemy", "pylint_flask", ]
generated-members = [
    "db.session.add",
    "db.session.commit",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
